[SSO-90] Fixed alignment for alert view.

--- a/stay_smart_2017/src/sass/page/_homepage.scss
+++ b/stay_smart_2017/src/sass/page/_homepage.scss
@@ -322,16 +322,8 @@
       @include breakpoint(tablet) {
         @include span-columns(4 of 12);
       }
-      &:nth-child(2n) {
-        @include breakpoint(tablet) {
-          @include omega();
-        }
-        @include breakpoint(large_tablet) {
-          margin-right: flex-gutter(12);
-        }
-      }
       &:nth-child(3n) {
-        @include breakpoint(large_tablet) {
+        @include breakpoint(tablet) {
           @include omega();
         }
       }
